--- a/sections/banner.liquid
+++ b/sections/banner.liquid
@@ -1,6 +1,6 @@
 <section>
-    {% comment %} Banner Section {% endcomment %}
-     <h1>Hello World! Hola</h1>
+    Banner Section
+     <h1>{{ section.settings.banner_text }}</h1>
 </section>
 
 {%  schema  %} 
