--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,6 +1,85 @@
 <section>
-  <h1>Hero Section</h1>
-  <p>This is hero section</p>
+  {% comment %} Banner Section {% endcomment %}
+
+  <div class="w-full ">
+    <div class="carousel w-full">
+      <div id="slide1" class="relative carousel-item w-full">
+        <img
+          width="100%"
+          height="100%"
+          src="{{ 'Banner_4.jpg' | asset_url }}"
+          class="w-full"
+        >
+        <div class="absolute bottom-0 left-0 md:left-10 p-2 md:p-6 text-left text-white">
+          <h3 class="mb-1 text-2xl font-bold drop-shadow-lg bg-black/50 p-2 inline-block">Slide One Title</h3>
+          <p class="hidden max-w-md text-sm drop-shadow-lg md:block bg-black/50 p-2">
+            This is a short paragraph describing the first slide content. You can customize it as needed.
+          </p>
+        </div>
+        <div class="absolute top-1/2 right-5 left-5 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide4" class="btn btn-circle">❮</a>
+          <a href="#slide2" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+
+      <div id="slide2" class="relative carousel-item w-full">
+        <img
+          width="100%"
+          height="100%"
+          src="{{ 'Banner_4.jpg' | asset_url }}"
+          class="w-full"
+        >
+        <div class="absolute bottom-0 left-0 md:left-10 p-2 md:p-6 text-left text-white">
+          <h3 class="mb-1 text-2xl font-bold drop-shadow-lg bg-black/50 p-2 inline-block">Slide Two Title</h3>
+          <p class="hidden max-w-md text-sm drop-shadow-lg md:block bg-black/50 p-2">
+            This is a short paragraph describing the second slide content. You can customize it as needed.
+          </p>
+        </div>
+        <div class="absolute top-1/2 right-5 left-5 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide1" class="btn btn-circle">❮</a>
+          <a href="#slide3" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+
+      <div id="slide3" class="relative carousel-item w-full">
+        <img
+          width="100%"
+          height="100%"
+          src="{{ 'Banner_4.jpg' | asset_url }}"
+          class="w-full"
+        >
+        <div class="absolute bottom-0 left-0 md:left-10 p-2 md:p-6 text-left text-white">
+          <h3 class="mb-1 text-2xl font-bold drop-shadow-lg bg-black/50 p-2 inline-block">Slide Three Title</h3>
+          <p class="hidden max-w-md text-sm drop-shadow-lg md:block bg-black/50 p-2">
+            This is a short paragraph describing the third slide content. You can customize it as needed.
+          </p>
+        </div>
+        <div class="absolute top-1/2 right-5 left-5 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide2" class="btn btn-circle">❮</a>
+          <a href="#slide4" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+
+      <div id="slide4" class="relative carousel-item w-full">
+        <img
+          width="100%"
+          height="100%"
+          src="{{ 'Banner_4.jpg' | asset_url }}"
+          class="w-full"
+        >
+        <div class="absolute bottom-0 left-0 md:left-10 p-2 md:p-6 text-left text-white">
+          <h3 class="mb-1 text-2xl font-bold drop-shadow-lg bg-black/50 p-2 inline-block">Slide Four Title</h3>
+          <p class="hidden max-w-md text-sm drop-shadow-lg md:block bg-black/50 p-2">
+            This is a short paragraph describing the fourth slide content. You can customize it as needed.
+          </p>
+        </div>
+        <div class="absolute top-1/2 right-5 left-5 flex -translate-y-1/2 transform justify-between">
+          <a href="#slide3" class="btn btn-circle">❮</a>
+          <a href="#slide1" class="btn btn-circle">❯</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
 
 {% schema %}
