--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -101,6 +101,12 @@
           "id": "description_text",
           "label": "Description Text",
           "default": "This is a short description of the store (default)"
+        },
+        {
+          "type": "image_picker",
+          "id": "image",
+          "label": "Image",
+          "info": "Upload an image for the hero section 1920px X 500px"
         }
       ]
     }
