--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -89,7 +89,7 @@
   "blocks": [
     {
       "type": "slider",
-      "name": "title",
+      "name": "Slider",
       "settings": [
         {
           "type": "text",
