--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -1,6 +1,4 @@
 <section>
-  {% comment %} Banner Section {% endcomment %}
-
   <div class="w-full ">
     <div class="carousel w-full">
       <div id="slide1" class="relative carousel-item w-full">
@@ -115,7 +113,7 @@
   "presets": [
     {
       "name": "Hero",
-      "blocks": [{ "type": "slider" }, { "type": "slider" }, { "type": "slider" }]
+      "blocks": [{ "type": "slider" }, { "type": "slider" }, { "type": "slider" }, { "type": "slider" }]
     }
   ]
 }
