--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -8,6 +8,7 @@
     {{ 'tailwind.output.css' | asset_url | stylesheet_tag: preload: true, media: 'all' }}
   </head>
   <body>
+    {% section 'navbar' %}
     <main id="main" role="main">
       {{ content_for_layout }}
     </main>
