--- a/sections/navbar.liquid
+++ b/sections/navbar.liquid
@@ -4,7 +4,7 @@
   // console.log('Navbar Text Color:', '{{ section.settings.navbar_text_color }}');
 </script>
 <section>
-  <div class="navbar bg-gray-400 navbar-dynamic shadow-sm">
+  <div class="navbar bg-gray-400 navbar-dynamic shadow-sm ">
     <div class="navbar-start">
       <div class="dropdown">
         <div tabindex="0" role="button" class="btn btn-ghost btn-circle">
@@ -14,7 +14,7 @@
         </div>
         <ul
           tabindex="0"
-          class="menu menu-sm dropdown-content bg-base-100 rounded-box z-1 mt-3 w-52 p-2 shadow"
+          class="menu menu-sm dropdown-content navbar-dynamic border-black/40 border-1 rounded-box z-1 mt-3 w-52 p-2 shadow"
         >
           <!-- Main menu -->
           {% for link in linklists['main-menu'].links -%}
