--- a/sections/hero.liquid
+++ b/sections/hero.liquid
@@ -5,6 +5,7 @@
         <img
           width="100%"
           height="100%"
+          loading="lazy"
           src="{{ 'Banner_1.jpg' | asset_url }}"
           class="w-full"
         >
@@ -24,6 +25,7 @@
         <img
           width="100%"
           height="100%"
+          loading="lazy"
           src="{{ 'Banner_5.jpg' | asset_url }}"
           class="w-full"
         >
@@ -43,6 +45,7 @@
         <img
           width="100%"
           height="100%"
+          loading="lazy"
           src="{{ 'Banner_3.jpg' | asset_url }}"
           class="w-full"
         >
@@ -62,6 +65,7 @@
         <img
           width="100%"
           height="100%"
+          loading="lazy"
           src="{{ 'Banner_4.jpg' | asset_url }}"
           class="w-full"
         >
