--- a/sections/grid.liquid
+++ b/sections/grid.liquid
@@ -1,4 +1,4 @@
-<section class="w-full">
+<section class="w-full mt-2">
   <!-- Hero Banner -->
   <div class="flex flex-col lg:flex-row">
     <!-- Left Image with hover effect -->
@@ -34,7 +34,7 @@
   </div>
 
   <!-- Category Grid -->
-  <div class="mt-4 grid grid-cols-2 gap-2 lg:grid-cols-4">
+  <div class="mt-4 grid grid-cols-2 gap-4 lg:grid-cols-4">
     <div class="group relative overflow-hidden ">
       <img
         width="100%"
