--- a/sections/card.liquid
+++ b/sections/card.liquid
@@ -1,3 +1,19 @@
-<section class="bg-gray-200 p-6">
-  <h2>Cards</h2>
+<section class=" p-4">
+  <div class="flex flex-wrap gap-4 flex-row  md:flex-nowrap ">
+    {% render 'card_single' %}
+    {% render 'card_single' %}
+    {% render 'card_single' %}
+  </div>
 </section>
+
+{% schema %}
+{
+  "name": "Card",
+  "settings": [],
+  "presets": [
+    {
+      "name": "card"
+    }
+  ]
+}
+{% endschema %}
