--- a/sections/article.liquid
+++ b/sections/article.liquid
@@ -1,3 +1,9 @@
 <section>
   <h1>Article</h1>
+  {% if article.image %}
+    <h1>{{ article.title }}</h1>
+    <p>
+      {{ article.content | strip_html }}
+    </p>
+  {% endif %}
 </section>
