--- a/sections/blogs.liquid
+++ b/sections/blogs.liquid
@@ -1,6 +1,6 @@
 <section>
   <h1>Blog</h1>
-  {% for blog in blog.news.articles %}
+  {% for blog in blogs.news.articles %}
     <h2>{{ blog.title }}</h2>
     <p>{{ blog.excerpt }}</p>
     <a href="{{ blog.url }}">Read more</a>
